remove pom argline